--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,10 +1,8 @@
-.App {
-  text-align: center;
-}
+.nav-ul li{
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
