--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,6 +4,13 @@
   padding: 10px;
 
 }
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #61dafb;
+  text-align: center;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
