--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -11,6 +11,25 @@
   background-color: #61dafb;
   text-align: center;
 }
+.register{
+  margin-left: 30px;
+}
+.inputBox{
+  display: block;
+  margin: 25px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid #20a7cc;
+}
+.appButton{
+  background-color: #61dafb;
+  color: white;
+  padding: 10px;
+  margin: 25px;
+  border: 1px solid black;
+  cursor: pointer;
+  width: 150px;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
